# Treg

./: README.md
shell/scad/: egg-42-2.stl  egg-42-3.stl  egg-42-4.stl  egg-42-5.stl  egg.scad  icosphere-1.stl  icosphere-2.stl  icosphere-3.stl  icosphere-4.stl  icosphere-5.stl  icosphere.scad  params.scad  track-egg-test-print.scad  track-egg.scad
shell/vtk/: CMakeLists.txt  TrackEgg.cpp  TrackEgg.cxx  TrackEgg.h  main.cpp  util.h  vtkImageEuclideanDistance2.cxx  vtkImageEuclideanDistance2.h
